[package]
name = "gai"
version = "0.1.4"
edition = "2021"
description = "Automatically generate commit messages from a git diff using AI"
authors = ["Daniel Pecos Martinez <me@danielpecos.com>"]
license = "MIT"
homepage = "https://github.com/dpecos/gai"
repository = "https://github.com/dpecos/gai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
